fix layout, add footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,70 +3,65 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Overlaid">
-  <main class="h-screen w-full flex justify-center items-center flex-col gap-8">
-    <svg
-      id="logo"
-      width="104"
-      height="118"
-      viewBox="0 0 52 59"
-      fill="none"
-      overflow="visible"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        id="logo1"
-        d="M26.0573 58.9944C17.9008 58.9944 12.0349 58.1006 8.4595 56.3128C6.6159 55.419 5.1634 54.2179 4.10196 52.7095C3.0405 51.2011 2.25838 49.3296 1.75559 47.095C1.30866 45.1397 1.02933 42.905 0.9176 40.3911C0.80587 37.8212 0.75 34.1899 0.75 29.4972C0.75 23.6313 0.86173 19.1341 1.0852 16.0056C1.36453 12.8771 2.00698 10.2514 3.01257 8.1285C4.12989 5.83799 5.8338 4.07821 8.1243 2.84916C10.4148 1.62011 13.655 0.782121 17.845 0.335201V29.4972C17.845 32.7933 17.9008 35.9497 18.0126 38.9665C18.1243 41.257 18.4036 42.933 18.8506 43.9944C19.3534 45.0559 20.1634 45.6704 21.2807 45.838C22.2304 46.0614 23.8226 46.1732 26.0573 46.1732C28.3478 46.1732 29.912 46.0894 30.75 45.9218V58.9106C30.2472 58.9665 29.493 58.9944 28.4874 58.9944H26.0573Z"
-        fill="white"></path>
-      <path
-        id="logo2"
-        d="M34.3213 19.9441C34.3771 21.4525 34.4051 24.6369 34.4051 29.4972V58.6592C38.5391 58.2682 41.7514 57.4581 44.0419 56.229C46.3883 55 48.1201 53.2123 49.2375 50.8659C50.243 48.7989 50.8576 46.2011 51.081 43.0726C51.3604 39.8883 51.5 35.3631 51.5 29.4972C51.5 22.7933 51.3045 17.7654 50.9134 14.4134C50.5782 11.0615 49.6844 8.352 48.2319 6.28491C46.6676 4.05028 44.1537 2.4581 40.69 1.50838C37.2821 0.50279 32.4497 0 26.1928 0H23.7626C22.757 0 22.0028 0.0279301 21.5 0.0838001V13.1564C22.2263 12.933 23.7905 12.8212 26.1928 12.8212C28.2598 12.8212 29.852 12.905 30.9693 13.0726C32.0866 13.2961 32.8967 13.9385 33.3995 15C33.9023 16.0056 34.2095 17.6536 34.3213 19.9441Z"
-        fill="white"></path>
-    </svg>
-
-    <svg
-      class="astro-a"
-      width="510"
-      height="590"
-      viewBox="0 0 51 59"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        d="M25.3073 58.9944C17.1508 58.9944 11.2849 58.1006 7.7095 56.3128C5.8659 55.419 4.4134 54.2179 3.35196 52.7095C2.2905 51.2011 1.50838 49.3296 1.00559 47.095C0.55866 45.1397 0.27933 42.905 0.1676 40.3911C0.0558702 37.8212 0 34.1899 0 29.4972C0 23.6313 0.11173 19.1341 0.3352 16.0056C0.61453 12.8771 1.25698 10.2514 2.26257 8.1285C3.37989 5.83799 5.0838 4.07821 7.3743 2.84916C9.6648 1.62011 12.905 0.782121 17.095 0.335201V29.4972C17.095 32.7933 17.1508 35.9497 17.2626 38.9665C17.3743 41.257 17.6536 42.933 18.1006 43.9944C18.6034 45.0559 19.4134 45.6704 20.5307 45.838C21.4804 46.0614 23.0726 46.1732 25.3073 46.1732C27.5978 46.1732 29.162 46.0894 30 45.9218V58.9106C29.4972 58.9665 28.743 58.9944 27.7374 58.9944H25.3073Z"
-        fill="url(#paint0_linear_1805_24383)"></path>
-      <path
-        d="M33.5713 19.9441C33.6271 21.4525 33.6551 24.6369 33.6551 29.4972V58.6592C37.7891 58.2682 41.0014 57.4581 43.2919 56.229C45.6383 55 47.3701 53.2123 48.4875 50.8659C49.493 48.7989 50.1076 46.2011 50.331 43.0726C50.6104 39.8883 50.75 35.3631 50.75 29.4972C50.75 22.7933 50.5545 17.7654 50.1634 14.4134C49.8282 11.0615 48.9344 8.352 47.4819 6.28491C45.9176 4.05028 43.4037 2.4581 39.94 1.50838C36.5321 0.50279 31.6997 0 25.4428 0H23.0126C22.007 0 21.2528 0.0279301 20.75 0.0838001V13.1564C21.4763 12.933 23.0405 12.8212 25.4428 12.8212C27.5098 12.8212 29.102 12.905 30.2193 13.0726C31.3366 13.2961 32.1467 13.9385 32.6495 15C33.1523 16.0056 33.4595 17.6536 33.5713 19.9441Z"
-        fill="url(#paint0_linear_1805_24383)"></path>
-      <defs>
-        <linearGradient
-          id="paint0_linear_1805_24383"
-          x1="247.358"
-          y1="0"
-          x2="247.358"
-          y2="622.479"
-          gradientUnits="userSpaceOnUse"
-        >
-          <stop stop-opacity="0.9"></stop>
-          <stop offset="1" stop-opacity="0.2"></stop>
-        </linearGradient>
-      </defs>
-    </svg>
+  <main
+    class="min-h-screen w-full flex justify-center items-center flex-col gap-8"
+  >
+    <div class="relative mt-24">
+      <svg
+        id="logo"
+        width="104"
+        height="118"
+        viewBox="0 0 52 59"
+        fill="none"
+        overflow="visible"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          id="logo1"
+          d="M26.0573 58.9944C17.9008 58.9944 12.0349 58.1006 8.4595 56.3128C6.6159 55.419 5.1634 54.2179 4.10196 52.7095C3.0405 51.2011 2.25838 49.3296 1.75559 47.095C1.30866 45.1397 1.02933 42.905 0.9176 40.3911C0.80587 37.8212 0.75 34.1899 0.75 29.4972C0.75 23.6313 0.86173 19.1341 1.0852 16.0056C1.36453 12.8771 2.00698 10.2514 3.01257 8.1285C4.12989 5.83799 5.8338 4.07821 8.1243 2.84916C10.4148 1.62011 13.655 0.782121 17.845 0.335201V29.4972C17.845 32.7933 17.9008 35.9497 18.0126 38.9665C18.1243 41.257 18.4036 42.933 18.8506 43.9944C19.3534 45.0559 20.1634 45.6704 21.2807 45.838C22.2304 46.0614 23.8226 46.1732 26.0573 46.1732C28.3478 46.1732 29.912 46.0894 30.75 45.9218V58.9106C30.2472 58.9665 29.493 58.9944 28.4874 58.9944H26.0573Z"
+          fill="white"></path>
+        <path
+          id="logo2"
+          d="M34.3213 19.9441C34.3771 21.4525 34.4051 24.6369 34.4051 29.4972V58.6592C38.5391 58.2682 41.7514 57.4581 44.0419 56.229C46.3883 55 48.1201 53.2123 49.2375 50.8659C50.243 48.7989 50.8576 46.2011 51.081 43.0726C51.3604 39.8883 51.5 35.3631 51.5 29.4972C51.5 22.7933 51.3045 17.7654 50.9134 14.4134C50.5782 11.0615 49.6844 8.352 48.2319 6.28491C46.6676 4.05028 44.1537 2.4581 40.69 1.50838C37.2821 0.50279 32.4497 0 26.1928 0H23.7626C22.757 0 22.0028 0.0279301 21.5 0.0838001V13.1564C22.2263 12.933 23.7905 12.8212 26.1928 12.8212C28.2598 12.8212 29.852 12.905 30.9693 13.0726C32.0866 13.2961 32.8967 13.9385 33.3995 15C33.9023 16.0056 34.2095 17.6536 34.3213 19.9441Z"
+          fill="white"></path>
+      </svg>
+      <svg
+        class="overlayed-o"
+        width="510"
+        height="590"
+        viewBox="0 0 51 59"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M25.3073 58.9944C17.1508 58.9944 11.2849 58.1006 7.7095 56.3128C5.8659 55.419 4.4134 54.2179 3.35196 52.7095C2.2905 51.2011 1.50838 49.3296 1.00559 47.095C0.55866 45.1397 0.27933 42.905 0.1676 40.3911C0.0558702 37.8212 0 34.1899 0 29.4972C0 23.6313 0.11173 19.1341 0.3352 16.0056C0.61453 12.8771 1.25698 10.2514 2.26257 8.1285C3.37989 5.83799 5.0838 4.07821 7.3743 2.84916C9.6648 1.62011 12.905 0.782121 17.095 0.335201V29.4972C17.095 32.7933 17.1508 35.9497 17.2626 38.9665C17.3743 41.257 17.6536 42.933 18.1006 43.9944C18.6034 45.0559 19.4134 45.6704 20.5307 45.838C21.4804 46.0614 23.0726 46.1732 25.3073 46.1732C27.5978 46.1732 29.162 46.0894 30 45.9218V58.9106C29.4972 58.9665 28.743 58.9944 27.7374 58.9944H25.3073Z"
+          fill="url(#paint0_linear_1805_24383)"></path>
+        <path
+          d="M33.5713 19.9441C33.6271 21.4525 33.6551 24.6369 33.6551 29.4972V58.6592C37.7891 58.2682 41.0014 57.4581 43.2919 56.229C45.6383 55 47.3701 53.2123 48.4875 50.8659C49.493 48.7989 50.1076 46.2011 50.331 43.0726C50.6104 39.8883 50.75 35.3631 50.75 29.4972C50.75 22.7933 50.5545 17.7654 50.1634 14.4134C49.8282 11.0615 48.9344 8.352 47.4819 6.28491C45.9176 4.05028 43.4037 2.4581 39.94 1.50838C36.5321 0.50279 31.6997 0 25.4428 0H23.0126C22.007 0 21.2528 0.0279301 20.75 0.0838001V13.1564C21.4763 12.933 23.0405 12.8212 25.4428 12.8212C27.5098 12.8212 29.102 12.905 30.2193 13.0726C31.3366 13.2961 32.1467 13.9385 32.6495 15C33.1523 16.0056 33.4595 17.6536 33.5713 19.9441Z"
+          fill="url(#paint0_linear_1805_24383)"></path>
+        <defs>
+          <linearGradient
+            id="paint0_linear_1805_24383"
+            x1="247.358"
+            y1="0"
+            x2="247.358"
+            y2="622.479"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-opacity="0.9"></stop>
+            <stop offset="1" stop-opacity="0.2"></stop>
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
     <h1>Welcome to <span class="text-gradient">Overlayed</span></h1>
     <p class="instructions">
       <code>Warning</code>
-       it's build with tauri and react and tailwind (so good)
-      <br />
-
-       there is a simple login flow where you approve in discord
-      <br />
-
-       you can disable clicks (clickthrough mode)
-      <br />
-
-       shows when users are muted / deafened
-      <br />
-
-       cross platform soon™
+      <div>it's build with tauri and react and tailwind (so good)</div>
+      <div>there is a simple login flow where you approve in discord</div>
+      <div>you can disable clicks (clickthrough mode)</div>
+      <div>shows when users are muted / deafened</div>
+      <div>cross platform soon™</div>
     </p>
     <p class="flex flex-col">
       <h1>Introducing Our Discord Overlay App</h1>
@@ -90,6 +85,7 @@ import Layout from "../layouts/Layout.astro";
 
        Crystal Clear Transparency: Our app offers a transparent window, letting you
       see what's important behind the scenes without interrupting your workflow.
+
 
       <br />
 
@@ -120,9 +116,41 @@ import Layout from "../layouts/Layout.astro";
       points of your app to attract users and generate interest.
     </p>
   </main>
+  <footer class="py-24 max-w-[800px] mx-auto text-indigo-50 text-center">
+    <div
+      class="relative flex justify-center items-center mb-24 w-full h-2 bg-gradient-to-r from-transparent via-indigo-400 to-transparent"
+    >
+    <a href="#" class="h-12 w-12 bg-indigo-400 rounded-[1.25rem] grid place-items-center group hover:scale-75 hover:bg-transparent duration-500 cursor-pointer">
+      <svg
+        class="group-hover:scale-[2] group-hover:rotate-180 duration-300 group-active:scale-100"
+        width="26"
+        height="29.5"
+        viewBox="0 0 52 59"
+        fill="none"
+        overflow="visible"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          id="logo1"
+          d="M26.0573 58.9944C17.9008 58.9944 12.0349 58.1006 8.4595 56.3128C6.6159 55.419 5.1634 54.2179 4.10196 52.7095C3.0405 51.2011 2.25838 49.3296 1.75559 47.095C1.30866 45.1397 1.02933 42.905 0.9176 40.3911C0.80587 37.8212 0.75 34.1899 0.75 29.4972C0.75 23.6313 0.86173 19.1341 1.0852 16.0056C1.36453 12.8771 2.00698 10.2514 3.01257 8.1285C4.12989 5.83799 5.8338 4.07821 8.1243 2.84916C10.4148 1.62011 13.655 0.782121 17.845 0.335201V29.4972C17.845 32.7933 17.9008 35.9497 18.0126 38.9665C18.1243 41.257 18.4036 42.933 18.8506 43.9944C19.3534 45.0559 20.1634 45.6704 21.2807 45.838C22.2304 46.0614 23.8226 46.1732 26.0573 46.1732C28.3478 46.1732 29.912 46.0894 30.75 45.9218V58.9106C30.2472 58.9665 29.493 58.9944 28.4874 58.9944H26.0573Z"
+          fill="white"></path>
+        <path
+          id="logo2"
+          d="M34.3213 19.9441C34.3771 21.4525 34.4051 24.6369 34.4051 29.4972V58.6592C38.5391 58.2682 41.7514 57.4581 44.0419 56.229C46.3883 55 48.1201 53.2123 49.2375 50.8659C50.243 48.7989 50.8576 46.2011 51.081 43.0726C51.3604 39.8883 51.5 35.3631 51.5 29.4972C51.5 22.7933 51.3045 17.7654 50.9134 14.4134C50.5782 11.0615 49.6844 8.352 48.2319 6.28491C46.6676 4.05028 44.1537 2.4581 40.69 1.50838C37.2821 0.50279 32.4497 0 26.1928 0H23.7626C22.757 0 22.0028 0.0279301 21.5 0.0838001V13.1564C22.2263 12.933 23.7905 12.8212 26.1928 12.8212C28.2598 12.8212 29.852 12.905 30.9693 13.0726C32.0866 13.2961 32.8967 13.9385 33.3995 15C33.9023 16.0056 34.2095 17.6536 34.3213 19.9441Z"
+          fill="white"></path>
+      </svg>
+    </a>
+    </div>
+    <a href="">Hop on the Cord</a>
+    <br />
+    <a href="">Star on the Hub</a>
+  </footer>
 </Layout>
 
 <style>
+  html {
+    scroll-behavior: smooth;
+  }
   main {
     margin: auto;
     padding: 1rem;
@@ -132,12 +160,12 @@ import Layout from "../layouts/Layout.astro";
     font-size: 20px;
     line-height: 1.6;
   }
-  .astro-a {
+  .overlayed-o {
     position: absolute;
-    top: calc(50% - 220px);
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     width: 220px;
+    transform: translate(-50%, -50%);
     height: auto;
     z-index: -1;
   }
@@ -185,18 +213,19 @@ import Layout from "../layouts/Layout.astro";
 
   #logo {
     opacity: 0;
+    transform: scale(0.5) translate(7%);
     animation: popin 1.5s ease-in-out forwards;
   }
   @keyframes popin {
     0% {
-      transform: scale(0.5) translateY(-33%);
+      transform: scale(0.5) translateY(7%);
       opacity: 0;
     }
     25% {
-      transform: scale(1.25) translateY(-33%);
+      transform: scale(1.25) translateY(7%);
     }
     100% {
-      transform: scale(1) translateY(-40%);
+      transform: scale(1) translateY(0);
       opacity: 1;
     }
   }
